--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,7 @@ python-multipart==0.0.6
 python-dotenv==1.0.0
 sqlalchemy==2.0.23
 alembic==1.13.0
+boto3==1.34.0
+cryptography==45.0.5
+aiohttp==3.12.14
+openai==1.97.1
