--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,21 +3,23 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
     "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "framer-motion": "^10.16.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1",
-    "reactflow": "^11.10.1",
-    "axios": "^1.3.4",
-    "react-icons": "^4.12.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
+    "chart.js": "^4.5.0",
+    "framer-motion": "^10.16.16",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "5.0.1",
+    "reactflow": "^11.10.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
