--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,3 +10,13 @@ boto3==1.34.0
 cryptography==45.0.5
 aiohttp==3.12.14
 openai==1.97.1
+
+# AI/ML Dependencies
+numpy==1.24.3
+pandas==2.0.3
+scikit-learn==1.3.0
+scipy==1.11.1
+joblib==1.3.1
+matplotlib==3.7.2
+seaborn==0.12.2
+plotly==5.15.0
